Update various issues with client overview report

--- a/CrmPackage/WebResources/Web Page (HTML)/ClientOverViewReport.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/ClientOverViewReport.html
@@ -1136,48 +1136,80 @@
         }
 
         function PopulateTop10OpenOppors() {
-            $.ajax({
-                type: "GET",
-                contentType: "application/json; charset=utf-8",
-                datatype: "json",
-                url: clientURL + "/api/data/v9.1/opportunities?fetchXml=%3Cfetch%20version%3D%221.0%22%20output-format%3D%22xml-platform%22%20mapping%3D%22logical%22%20distinct%3D%22false%22%20count%3D%2210%22%20%3E%3Centity%20name%3D%22opportunity%22%20%3E%3Cattribute%20name%3D%22opportunityid%22%20%2F%3E%3Cattribute%20name%3D%22name%22%20%2F%3E%3Cattribute%20name%3D%22estimatedvalue_base%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_projectmanager_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_projectdirector_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_probabilityofprojectproceeding%22%20alias%3D%22Probability_of_Proceeding%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_estarupinvolvementstart%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_closeprobability_synced%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_bidmanager_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_biddirector_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_arupregionid%22%20%2F%3E%3Cattribute%20name%3D%22statuscode%22%20alias%3D%22StatusCode%22%20%2F%3E%3Cattribute%20name%3D%22statecode%22%20%2F%3E%3Corder%20attribute%3D%22estimatedvalue_base%22%20descending%3D%22true%22%20%2F%3E%3Clink-entity%20name%3D%22account%22%20from%3D%22accountid%22%20to%3D%22customerid%22%20alias%3D%22aj%22%20link-type%3D%22inner%22%20%2F%3E%3Cfilter%20type%3D%22and%22%20%3E%3Ccondition%20attribute%3D%22statecode%22%20operator%3D%22eq%22%20value%3D%220%22%20%2F%3E%3Ccondition%20attribute%3D%22statuscode%22%20operator%3D%22ne%22%20value%3D%223%22%20%2F%3E%3Ccondition%20attribute%3D%22statuscode%22%20operator%3D%22not-null%22%20%2F%3E%3Cfilter%20type%3D%22or%22%20%3E%3Ccondition%20entityname%3D%22aj%22%20attribute%3D%22accountid%22%20operator%3D%22under%22%20uitype%3D%22account%22%20value%3D%22" + parentaccountid + "%22%20%2F%3E%3Ccondition%20entityname%3D%22aj%22%20attribute%3D%22accountid%22%20operator%3D%22eq%22%20uitype%3D%22account%22%20value%3D%22" + parentaccountid + "%22%20%2F%3E%3C%2Ffilter%3E%3C%2Ffilter%3E%3C%2Fentity%3E%3C%2Ffetch%3E",
-                beforeSend: function(XMLHttpRequest) {
-                    XMLHttpRequest.setRequestHeader("OData-MaxVersion", "4.0");
-                    XMLHttpRequest.setRequestHeader("OData-Version", "4.0");
-                    XMLHttpRequest.setRequestHeader("Accept", "application/json");
-                    XMLHttpRequest.setRequestHeader("Prefer", "odata.include-annotations=\"*\"");
-                },
-                async: false,
-                success: function(data, textStatus, xhr) {
-                    opportRecords = data.value;
-                },
-                error: function(xhr, textStatus, errorThrown) {
-                    var alertStrings = { confirmButtonLabel: "OK", text: textStatus + " " + errorThrown, title: "Alert" };
-                    var alertOptions = { height: 120, width: 260 };
-                    AlertDialog( alertStrings, alertOptions);
+            debugger;
+            GetCRMData("opportunities?fetchXml=%3Cfetch%20version%3D%221.0%22%20output-format%3D%22xml-platform%22%20mapping%3D%22logical%22%20distinct%3D%22false%22%20count%3D%2210%22%20%3E%3Centity%20name%3D%22opportunity%22%20%3E%3Cattribute%20name%3D%22opportunityid%22%20%2F%3E%3Cattribute%20name%3D%22name%22%20%2F%3E%3Cattribute%20name%3D%22estimatedvalue_base%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_projectmanager_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_projectdirector_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_probabilityofprojectproceeding%22%20alias%3D%22Probability_of_Proceeding%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_estarupinvolvementstart%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_closeprobability_synced%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_bidmanager_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_biddirector_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_arupregionid%22%20%2F%3E%3Cattribute%20name%3D%22statuscode%22%20alias%3D%22StatusCode%22%20%2F%3E%3Cattribute%20name%3D%22statecode%22%20%2F%3E%3Corder%20attribute%3D%22estimatedvalue_base%22%20descending%3D%22true%22%20%2F%3E%3Clink-entity%20name%3D%22account%22%20from%3D%22accountid%22%20to%3D%22customerid%22%20alias%3D%22aj%22%20link-type%3D%22inner%22%20%2F%3E%3Cfilter%20type%3D%22and%22%20%3E%3Ccondition%20attribute%3D%22statecode%22%20operator%3D%22eq%22%20value%3D%220%22%20%2F%3E%3Ccondition%20attribute%3D%22statuscode%22%20operator%3D%22ne%22%20value%3D%223%22%20%2F%3E%3Ccondition%20attribute%3D%22statuscode%22%20operator%3D%22not-null%22%20%2F%3E%3Cfilter%20type%3D%22or%22%20%3E%3Ccondition%20entityname%3D%22aj%22%20attribute%3D%22accountid%22%20operator%3D%22under%22%20uitype%3D%22account%22%20value%3D%22" + parentaccountid + "%22%20%2F%3E%3Ccondition%20entityname%3D%22aj%22%20attribute%3D%22accountid%22%20operator%3D%22eq%22%20uitype%3D%22account%22%20value%3D%22" + parentaccountid + "%22%20%2F%3E%3C%2Ffilter%3E%3C%2Ffilter%3E%3C%2Fentity%3E%3C%2Ffetch%3E"
+            ).then(( data ) => {
+                var opportRecords = data;
+                var opporLst = [];
+                if (opportRecords.length > 0) {
+                    for (var i = 0; i < opportRecords.length; i++) {
+                        var name = opportRecords[i].name != undefined ? opportRecords[i].name : "";
+                        var projectDirector = opportRecords[i]._ccrm_projectdirector_userid_value != undefined ? opportRecords[i]["_ccrm_projectdirector_userid_value@OData.Community.Display.V1.FormattedValue"] : "";
+                        var status = opportRecords[i]["StatusCode@OData.Community.Display.V1.FormattedValue"];
+                        var fee = opportRecords[i].estimatedvalue_base != undefined ? opportRecords[i].estimatedvalue_base * exchangeratevalue : 0.00;
+                        var probWin = opportRecords[i].ccrm_closeprobability_synced != undefined ? opportRecords[i].ccrm_closeprobability_synced : "";
+                        var probPros = opportRecords[i].Probability_of_Proceeding != undefined ? opportRecords[i].Probability_of_Proceeding : "";
+                        var arupStartDate = opportRecords[i].ccrm_estarupinvolvementstart != undefined ? opportRecords[i]["ccrm_estarupinvolvementstart@OData.Community.Display.V1.FormattedValue"] : "";
+
+
+                        var oppor = {
+                            "Title": name,
+                            "Project Director": projectDirector,
+                            "Status": status,
+                            "Total Fee Income": Math.round(fee / 1000).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","),
+                            "Probability of Win %": probWin,
+                            "Probability of Proceeding %": probPros,
+                            "Arup Start Date": arupStartDate
+                        };
+                        opporLst.push(oppor);
+                    }
+                    var o = opporLst.filter(function(currentValue, index, arr) { if (index < 10) return currentValue; });
+                    DrawTable("#top10OpenOportunities", o, Object.keys(o[0]));
+                    $("#top10OpenOpporCnt").text("( " + opporLst.length + " in Total)");
                 }
             });
-            var opporLst = [];
-            if (opportRecords.length > 0) {
-                for (var i = 0; i < opportRecords.length; i++) {
-                    var name = opportRecords[i].name != undefined ? opportRecords[i].name : "";
-                    var projectDirector = opportRecords[i]._ccrm_projectdirector_userid_value != undefined ? opportRecords[i]["_ccrm_projectdirector_userid_value@OData.Community.Display.V1.FormattedValue"] : "";
-                    var status = opportRecords[i]["StatusCode@OData.Community.Display.V1.FormattedValue"];
-                    var fee = opportRecords[i].estimatedvalue_base != undefined ? opportRecords[i].estimatedvalue_base * exchangeratevalue : 0.00;
-                    var probWin = opportRecords[i].ccrm_closeprobability_synced != undefined ? opportRecords[i].ccrm_closeprobability_synced : "";
-                    var probPros = opportRecords[i].Probability_of_Proceeding != undefined ? opportRecords[i].Probability_of_Proceeding : "";
-                    var arupStartDate = opportRecords[i].ccrm_estarupinvolvementstart != undefined ? opportRecords[i]["ccrm_estarupinvolvementstart@OData.Community.Display.V1.FormattedValue"] : "";
+            //$.ajax({
+            //    type: "GET",
+            //    contentType: "application/json; charset=utf-8",
+            //    datatype: "json",
+            //    url: clientURL + "/api/data/v9.1/opportunities?fetchXml=%3Cfetch%20version%3D%221.0%22%20output-format%3D%22xml-platform%22%20mapping%3D%22logical%22%20distinct%3D%22false%22%20count%3D%2210%22%20%3E%3Centity%20name%3D%22opportunity%22%20%3E%3Cattribute%20name%3D%22opportunityid%22%20%2F%3E%3Cattribute%20name%3D%22name%22%20%2F%3E%3Cattribute%20name%3D%22estimatedvalue_base%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_projectmanager_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_projectdirector_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_probabilityofprojectproceeding%22%20alias%3D%22Probability_of_Proceeding%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_estarupinvolvementstart%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_closeprobability_synced%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_bidmanager_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_biddirector_userid%22%20%2F%3E%3Cattribute%20name%3D%22ccrm_arupregionid%22%20%2F%3E%3Cattribute%20name%3D%22statuscode%22%20alias%3D%22StatusCode%22%20%2F%3E%3Cattribute%20name%3D%22statecode%22%20%2F%3E%3Corder%20attribute%3D%22estimatedvalue_base%22%20descending%3D%22true%22%20%2F%3E%3Clink-entity%20name%3D%22account%22%20from%3D%22accountid%22%20to%3D%22customerid%22%20alias%3D%22aj%22%20link-type%3D%22inner%22%20%2F%3E%3Cfilter%20type%3D%22and%22%20%3E%3Ccondition%20attribute%3D%22statecode%22%20operator%3D%22eq%22%20value%3D%220%22%20%2F%3E%3Ccondition%20attribute%3D%22statuscode%22%20operator%3D%22ne%22%20value%3D%223%22%20%2F%3E%3Ccondition%20attribute%3D%22statuscode%22%20operator%3D%22not-null%22%20%2F%3E%3Cfilter%20type%3D%22or%22%20%3E%3Ccondition%20entityname%3D%22aj%22%20attribute%3D%22accountid%22%20operator%3D%22under%22%20uitype%3D%22account%22%20value%3D%22" + parentaccountid + "%22%20%2F%3E%3Ccondition%20entityname%3D%22aj%22%20attribute%3D%22accountid%22%20operator%3D%22eq%22%20uitype%3D%22account%22%20value%3D%22" + parentaccountid + "%22%20%2F%3E%3C%2Ffilter%3E%3C%2Ffilter%3E%3C%2Fentity%3E%3C%2Ffetch%3E",
+            //    beforeSend: function(XMLHttpRequest) {
+            //        XMLHttpRequest.setRequestHeader("OData-MaxVersion", "4.0");
+            //        XMLHttpRequest.setRequestHeader("OData-Version", "4.0");
+            //        XMLHttpRequest.setRequestHeader("Accept", "application/json");
+            //        XMLHttpRequest.setRequestHeader("Prefer", "odata.include-annotations=\"*\"");
+            //    },
+            //    async: false,
+            //    success: function(data, textStatus, xhr) {
+            //        opportRecords = data.value;
+            //    },
+            //    error: function(xhr, textStatus, errorThrown) {
+            //        var alertStrings = { confirmButtonLabel: "OK", text: textStatus + " " + errorThrown, title: "Alert" };
+            //        var alertOptions = { height: 120, width: 260 };
+            //        AlertDialog( alertStrings, alertOptions);
+            //    }
+            //});
+            //var opporLst = [];
+            //if (opportRecords.length > 0) {
+            //    for (var i = 0; i < opportRecords.length; i++) {
+            //        var name = opportRecords[i].name != undefined ? opportRecords[i].name : "";
+            //        var projectDirector = opportRecords[i]._ccrm_projectdirector_userid_value != undefined ? opportRecords[i]["_ccrm_projectdirector_userid_value@OData.Community.Display.V1.FormattedValue"] : "";
+            //        var status = opportRecords[i]["StatusCode@OData.Community.Display.V1.FormattedValue"];
+            //        var fee = opportRecords[i].estimatedvalue_base != undefined ? opportRecords[i].estimatedvalue_base * exchangeratevalue : 0.00;
+            //        var probWin = opportRecords[i].ccrm_closeprobability_synced != undefined ? opportRecords[i].ccrm_closeprobability_synced : "";
+            //        var probPros = opportRecords[i].Probability_of_Proceeding != undefined ? opportRecords[i].Probability_of_Proceeding : "";
+            //        var arupStartDate = opportRecords[i].ccrm_estarupinvolvementstart != undefined ? opportRecords[i]["ccrm_estarupinvolvementstart@OData.Community.Display.V1.FormattedValue"] : "";
 
 
-                    var oppor = {
-                        "Title": name, "Project Director": projectDirector, "Status": status, "Total Fee Income": Math.round(fee / 1000).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","), "Probability of Win %": probWin, "Probability of Proceeding %": probPros, "Arup Start Date": arupStartDate
-                    };
-                    opporLst.push(oppor);
-                }
-                var o = opporLst.filter(function(currentValue, index, arr) { if (index < 10) return currentValue; });
-                DrawTable("#top10OpenOportunities", o, Object.keys(o[0]));
-                $("#top10OpenOpporCnt").text("( " + opporLst.length + " in Total)");
-            }
+            //        var oppor = {
+            //            "Title": name, "Project Director": projectDirector, "Status": status, "Total Fee Income": Math.round(fee / 1000).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","), "Probability of Win %": probWin, "Probability of Proceeding %": probPros, "Arup Start Date": arupStartDate
+            //        };
+            //        opporLst.push(oppor);
+            //    }
+            //    var o = opporLst.filter(function(currentValue, index, arr) { if (index < 10) return currentValue; });
+            //    DrawTable("#top10OpenOportunities", o, Object.keys(o[0]));
+            //    $("#top10OpenOpporCnt").text("( " + opporLst.length + " in Total)");
+            //}
         }
 
         function Populate5MostRecentWins() {
@@ -1494,24 +1526,26 @@
             GetCRMData(
                 "accounts(" + accId + ")?$select=name&$expand=ccrm_managingteamid($select=name)",
                 function(result) {
-                    var teamid = result.ccrm_managingteamid.teamid;
-                    GetCRMData("teams(" + teamid + ")?$select=name&$expand=teammembership_association($select=fullname,title,_ccrm_arupofficeid_value;$expand=ccrm_arupofficeid($select=ccrm_name),businessunitid($select=name))",
-                            function(members) {
-                                for (var i = 0; i < members.teammembership_association.length; i++) {
-                                    var member = members.teammembership_association[i];
-                                    var user = {
-                                        Name: member.fullname,
-                                       // "Arup Office": member.ccrm_arupofficeid["__DisplayName__"],
-                                        Title: member.title,
-                                        // Business: "?"
-                                    };
-                                    userList.push(user);
-                                }
-                            },
-                            "Getting relationship team members")
-                        .then(function() {
-                            DrawTable("#relationshipTeamMembers", userList, Object.keys(userList[0]));
-                        });
+                    if (!!result && !!result.ccrm_managingteamid) {
+                        var teamid = result.ccrm_managingteamid.teamid;
+                        GetCRMData("teams(" + teamid + ")?$select=name&$expand=teammembership_association($select=fullname,title,_ccrm_arupofficeid_value;$expand=ccrm_arupofficeid($select=ccrm_name),businessunitid($select=name))",
+                                function(members) {
+                                    for (var i = 0; i < members.teammembership_association.length; i++) {
+                                        var member = members.teammembership_association[i];
+                                        var user = {
+                                            Name: member.fullname,
+                                            // "Arup Office": member.ccrm_arupofficeid["__DisplayName__"],
+                                            Title: member.title,
+                                            // Business: "?"
+                                        };
+                                        userList.push(user);
+                                    }
+                                },
+                                "Getting relationship team members")
+                            .then(function() {
+                                DrawTable("#relationshipTeamMembers", userList, Object.keys(userList[0]));
+                            });
+                    }
                 },
                 "Getting relationship team");
         }
@@ -1530,7 +1564,7 @@
                     type: "GET",
                     contentType: "application/json; charset=utf-8",
                     datatype: "json",
-                    url: clientURL + "/api/data/v9.1/" + query,
+                    url: clientURL + "/api/data/v9.2/" + query,
                     beforeSend: function(xmlHttpRequest) {
                         xmlHttpRequest.setRequestHeader("OData-MaxVersion", "4.0");
                         xmlHttpRequest.setRequestHeader("OData-Version", "4.0");
@@ -2050,7 +2084,7 @@
         }
         function OpenOppTop10Table(allOpenOppor) {
 
-            var sortOpp = allOpenOppor.sort(function (a, b) {
+            var top10Opps = allOpenOppor.sort(function (a, b) {
 
                 if (a.Fee < b.Fee) {
                     return 1;
@@ -2061,9 +2095,12 @@
                 // a must be equal to b
                 return 0;
             })
-            var filOpp = sortOpp.filter(function (currVal, index, arr) { if (index < 10) return currVal; });
+            .slice(0,9)
+            .map(
+            //var filOpp = sortOpp.filter(function (currVal, index, arr) { if (index < 10) return currVal; });
 
-            var finalOpp = filOpp.map(function (d) {
+            //var finalOpp = filOpp.map(
+            function (d) {
                 return {
                     "Title": d.Name, "Project Director": d.ProjectDirector, "Status": d.Status, "Total Fee Income": Math.round(d.Fee / 1000).toString().replace(/\B(?=(\d{3})+(?!\d))/g, ","),
                     "Probability of Win %": d.ProbWin, "Prob. Proj Proceed %": d.ProbPros, "Arup Start Date": d.ArupStartDate, "OpportunityId": d.OpportunityId
@@ -2073,7 +2110,7 @@
             $("#top10OpenOpporCnt").text("( " + allOpenOppor.length + " in Total)");
 
             if (finalOpp.length > 0) {
-                DrawTable("#top10OpenOportunities", finalOpp, Object.keys(finalOpp[0]).filter(function(d) { return d !== 'OpportunityId'; }));
+                DrawTable("#top10OpenOportunities", top10Opps, Object.keys(top10Opps[0]).filter(function(d) { return d !== 'OpportunityId'; }));
             }
         }
         function GetPhase(status) {
