--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -150,6 +150,8 @@ There will be several copies of the web resource visible in the debugger as "aru
             font-size: 16px;
             font-weight: 600;
             margin-left: 50px;
+            margin-block-start: 0px;
+            margin-block-end: 0px;
         }
 
         ul {
